clusters/talos-cluster/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: redis
  labels:
    app: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deployment
  template:
    metadata:
      name: redis-deployment
      labels:
        app: redis-deployment
    spec:
      containers:
        - name: redis-deployment
          image: redis:8.8.1@sha256:c88d347edef6249a6d2293f926f1eeb48bd40c57cbcd02c07f52e7f1fd2cb46b
          imagePullPolicy: IfNotPresent
          command: ["redis-server"]
          args: ["--maxmemory", "512mb", "--maxmemory-policy", "allkeys-lru"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
