clusters/talos-cluster/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis
spec:
  selector:
    app: redis-deployment
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
      protocol: TCP
  type: LoadBalancer
